--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,12 +6,33 @@
   <display-name>Archetype Created Web Application</display-name>
 
   <servlet>
-    <servlet-name>myservlet</servlet-name>
-    <servlet-class>com.revature.MyServlet</servlet-class>
+    <servlet-name>HomePage</servlet-name>
+    <display-name>Home Page</display-name>
+    <servlet-class>com.revature.HomePageServlet</servlet-class>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>myservlet</servlet-name>
-    <url-pattern>/web</url-pattern>
+    <servlet-name>HomePage</servlet-name>
+    <url-pattern></url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>LoginServlet</servlet-name>
+    <servlet-class>com.revature.LoginServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>LoginServlet</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>LogoutServlet</servlet-name>
+    <servlet-class>com.revature.LogoutServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>LogoutServlet</servlet-name>
+    <url-pattern>/logout</url-pattern>
   </servlet-mapping>
 </web-app>
